# fn64

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  fresh
docs/: AGENTS.md  INDEX.md  boot_spine_checkpoint.md
docs/context/: CONTEXT_MANIFEST.json  CONTEXT_MATRIX.md  CURRENT_STATE.md  DECISION_LOG.md  PROJECT_HISTORY.md  README.md
docs/context/subsystems/: build-and-tooling.md  cpu-execution.md  exceptions-and-cop0.md  fleet-operations.md  historical-cpp-reference.md  host-runtime.md  inspection-and-evidence.md  instruction-pipeline.md  machine-core.md  memory-and-cartridge.md
docs/lanes/: boot-frontier-sp-imem-lw-v1.md  integration-queue.md  lane-registry.md  ordinary-control-flow-delay-slot-v1.md  pif-ipl2-handoff-state-mapping-v1.md  pif-ipl2-profiled-copy-materialization-v1.md  pif-ipl2-source-mapping-v1.md  real-cartridge-boot-spine-v1.md  rust-purity-repo-cleanup-v1.md  sp-imem-bootstrap-provenance-v1.md  user-supplied-pif-boot-source-v1.md
docs/process/: CONTEXT_DELTA.md  EVIDENCE_AND_RELEASE.md  HANDOFF_AND_RESPAWN.md  MASTER_DIRECT_WORKFLOW.md  PACKET_PROTOCOL.md  WORKTREE_PROVISIONING.md
ops/: AGENTS.md
ops/evidence/: README.md
ops/evidence/aligned-sw-generated-x105-frontier-v1/: ADDRESS_AND_TARGET_POLICY.md  ADES_AND_DELAY_SLOT.md  ATOMICITY_AND_ROLLBACK.md  FRONTIER_AUDIT.tsv  GENERATED_X105_COMPOSITION.md  LEGAL_AND_NO_HACK_AUDIT.md  NEXT_FRONTIER.md  README.md  SOURCE_ANCHORS.md  SP_IMEM_WRITE_PROVENANCE.md  SW_OWNERSHIP.md  SW_SEMANTICS.md  SYNTHETIC_TEST_COVERAGE.md  VALIDATION.md
ops/evidence/beql-generated-x105-test-cc-frontier-v1/: ANNULLED_SLOT_EFFECT_BOUNDARY.md  BEQL_IDENTITY_DECISION.md  BEQL_NOT_TAKEN_ANNUL_SEMANTICS.md  BEQL_SOURCE_OPERANDS.md  BEQL_TAKEN_SEMANTICS.md  BEQL_TARGET_CALCULATION.md  CONTROL_FLOW_PLANNING_AND_APPLICATION.md  DELAY_SLOT_AND_EXCEPTION_OWNERSHIP.md  FRONTIER_AUDIT.tsv  GENERATED_TEST_CC_CALL_PATH.md  GENERATED_WRITE_CC_SEQUENCE.md  GENERATED_X105_BEQL_SEQUENCE.md  LEGAL_AND_PRIVATE_INPUT_AUDIT.md  NO_BRANCH_LIKELY_FRAMEWORK_AUDIT.md  PC_NEXT_PC_AND_COUNT_CADENCE.md  RDRAM_MODE_NEXT_FRONTIER.md  README.md  REJECTION_AND_ATOMICITY.md  SOURCE_ANCHORS.md  SOURCE_KNOWNNESS_POLICY.md  SYNTHETIC_TEST_COVERAGE.md  VALIDATION.md
ops/evidence/bltz-generated-x105-branch-frontier-v1/: README.md  (+13 more)
ops/fleet/: integration-queue.json
rust/: AGENTS.md  Cargo.toml  PARITY.md  README.md  verify-forward
rust/crates/fn64-inspection/: AGENTS.md  Cargo.toml
rust/crates/fn64-inspection/src/: boot_probe.rs  lib.rs
rust/crates/fn64-inspection/tests/: boot_probe_cli.rs
src/: AGENTS.md  app.cpp  app.hpp  bootstrap.hpp  bootstrap_arith.cpp  bootstrap_common.cpp  bootstrap_common.hpp  bootstrap_control.cpp  bootstrap_control_branch_likely.cpp  bootstrap_control_jumps.cpp  bootstrap_control_ordinary_branches.cpp  bootstrap_control_unsupported.cpp  bootstrap_data.cpp  cartridge.cpp  cartridge.hpp  machine.cpp  machine.hpp  main.cpp  rom.cpp  rom.hpp
src/core/: cartridge.cpp  cartridge.hpp  machine.cpp  machine.hpp  machine_cpu.cpp  rom.cpp  rom.hpp
src/proof/: bootstrap.cpp  bootstrap_arith.cpp  bootstrap_common.cpp  bootstrap_common.hpp  bootstrap_control.cpp  bootstrap_control_branch_likely.cpp  bootstrap_control_jumps.cpp  bootstrap_control_ordinary_branches.cpp  bootstrap_control_register_jump_demos.cpp  bootstrap_control_unsupported.cpp  bootstrap_data.cpp  bootstrap_traps.cpp  selftest_main.cpp
tools/: AGENTS.md
tools/fleet/: context-sha  context-verify  evidence-manifest  integration-queue  lane-doctor  packet-verify  supervisor-respawn-bundle  test-fleet
(+603 files in other folders)
