[package]
name = "fn64-inspection"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
fn64-core = { path = "../fn64-core" }

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "fn64_machine_probe"
path = "src/bin/fn64_machine_probe.rs"

[[bin]]
name = "fn64_step_probe"
path = "src/bin/fn64_step_probe.rs"

[[bin]]
name = "fn64_boot_probe"
path = "src/bin/fn64_boot_probe.rs"
